Work in progress: see SPR-2513
git-svn-id: https://src.springframework.org/svn/spring-maintenance/trunk@14171 fd5a2b45-1f63-4059-99e9-3c7cb7fd75c8